# mecab.el

./: .gitignore  CMakeLists.txt  Cask  LICENSE.txt  README.org  ert-profile  mecab-enhanced-pkg.el  mecab-enhanced.el  mecab.el
cmake/: CMakeLists.boost.txt.in  CMakeLists.gtest.txt.in
include/: tagger.h
src/: mecabel_impl.cc  tagger.cc
test/: mecab-enhanced.el-test.el  test_mecabel.cc
